@@ -1,4 +1,4 @@
-use Test::More tests => 709;
+use Test::More tests => 711;
 use Cwd;
 use URI::Escape;
 use MolochTest;
@@ -436,6 +436,9 @@ if (0) {
 # Check sorting when no mapping
     countTest(1, "startTime=1387256793&stopTime=1387258118&order=tls.ja3:desc&expression=" . uri_escape("file=$pwd/bt-udp.pcap"));
     countTest(1, "startTime=1387256793&stopTime=1387258118&order=tls.ja3:asc&expression=" . uri_escape("file=$pwd/bt-udp.pcap"));
+
+# ja4
+    countTest(1, "date=-1&expression=" . uri_escape("(file=$pwd/bt-udp.pcap||file=$pwd/smtp-starttls.pcap)&&tls.ja4==t10i290100_cdba58456bdf_e78b541c01a9"));
 
 # communityId
     countTest(1, "date=-1&expression=" . uri_escape("(file=$pwd/socks-http-pass.pcap||file=$pwd/gre-sample.pcap)&&communityId=\"1:eMRxQSkNuVRbgi0elxmjkFvRujg=\""));
